--- a/blog-api/src/main/resources/application-dev.properties
+++ b/blog-api/src/main/resources/application-dev.properties
@@ -13,9 +13,9 @@ blog.view=http://localhost:8081
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/nblog?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=root123
 # Redis连接信息
-spring.redis.host=192.168.17.132
+spring.redis.host=127.0.0.1
 spring.redis.password=123456
 spring.redis.port=6379
 spring.redis.database=0
